fixed sign in links

--- a/views/index.jade
+++ b/views/index.jade
@@ -35,15 +35,15 @@ html.no-js(lang='en')
                 li
                   a.scroll(href='/#features') Features
                 li
-                  a(href='http://localhost:3000/register') Get Free Followers
+                  a(href='/register') Get Free Followers
                 li
-                  a(href='http://localhost:3000/login') Sign In
+                  a(href='/login') Sign In
     #featured-wrapper
       .row
         .large-12.columns
           h2 Automate Your Instagram Activity
           h3 Get real followers, likes, and comments on your instagram in three clicks.
-          a.button.orange.xlarge(href='http://localhost:3000/dd') Start Your 3 Day Free Trial
+          a.button.orange.xlarge(href='/register') Start Your 3 Day Free Trial
     #how-it-works
     #content-wrapper
       .row
@@ -68,7 +68,7 @@ html.no-js(lang='en')
     #middle-wrapper
       .row
         .large-12.columns
-          a.button.orange.xlarge(href='https://localhost:3000/register') Start Your 3 Day Free Trial
+          a.button.orange.xlarge(href='/register') Start Your 3 Day Free Trial
     #features
     #content-wrapper
       .row
@@ -136,7 +136,7 @@ html.no-js(lang='en')
         .large-12.columns
           h2.white Don't Be Basic, Be Awesome
           h3.white Get real engagement on your Instagram right now!
-          a.button.orange.large(href='https://localhost:3000/register') Start Your 3 Day Free Trial
+          a.button.orange.large(href='/register') Start Your 3 Day Free Trial
     iframe#intercom_map_iframe(frameborder='0', src='')
       .row
         .large-12.columns.large-centered.center
@@ -147,9 +147,9 @@ html.no-js(lang='en')
             li
               a.scroll(href='/#features') Features
             li
-              a(href='https://localhost:3000/register') Get Free Followers
+              a(href='/register') Get Free Followers
             li
-              a(href='https://localhost:3000/login') Sign In
+              a(href='/login') Sign In
             li
               a(href='/terms-of-service/') Terms of Service
             li
