--- a/views/register.jade
+++ b/views/register.jade
@@ -1,6 +1,25 @@
 // Created by smedapati on 2/15/2017.
-extends layout
-block content
+html.no-js(lang='en')
+    head
+        meta(content='Buy Real Instagram Followers | Instagram Likes from InstagramHelper', property='og:title')
+        meta(content='website', property='og:type')
+        meta(content='http://127.0.0.1:3000/', property='og:url')
+        meta(content='/images/icon.jpg', property='og:image')
+        meta(content='Instagram bot for likes, follows, unfollows and schedule posts - InstagramHelper', property='og:site_name')
+        meta(content='InstagramHelper offers real Instagram followers and likes in three clicks. We provide a full range of actions & settings to help you increase & target specific fans.', property='og:description')
+        meta(content='1356480217', property='fb:admins')
+        meta(charset='utf-8')
+        meta(content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no', name='viewport')
+        title Buy Real Instagram Followers | Instagram Likes from InstagramHelper
+        meta(content='Copyright InstagramHelper 2015. All rights reserved worldwide. Contents of this site may not be reproduced without prior consent.', name='copyright')
+        meta(content='Same as description', name='abstract')
+        meta(content='InstagramHelper offers real Instagram followers and likes in three clicks. We provide a full range of actions & settings to help you increase & target specific fans.', name='description')
+        link(href='/assets/images/favicon.ico', rel='shortcut icon', type='image/x-icon')
+        link(href='/images/mystyle.css', rel='stylesheet')
+body(style='background-image: url(/images/featured2-cb0dc81d.jpg);')
+.max-width-450.centered
+    .widget.no-margin-bottom
+        .whead.text-center.tall
    .container
       h1 Register Page
       p.lead Say something worthwhile here.
