--- a/views/register.jade
+++ b/views/register.jade
@@ -21,7 +21,7 @@ body(style='background-image: url(/images/featured-3702d9ec.jpg);')
     .widget.no-margin-bottom
         .whead.text-center.tall
    .container
-      h1 Register Page
+      h1(style='color:white;') Register Page
       p.lead Say something worthwhile here.
       br
       form(role='form', action="/register",method="post", style='max-width: 300px;')
