--- a/views/dd.jade
+++ b/views/dd.jade
@@ -69,8 +69,8 @@ html
                         a
                           .user-menu
                             span#picture
-                              img(alt='medapati.soujanya1@gmail.com', src='https://secure.gravatar.com/avatar/023e004f2216ede0eb3b854acd0b5da2?default=identicon&secure=true', width='80', height='80')
-                            span#name medapati.soujanya1@gmail.com
+                              img(alt='me', src='https://secure.gravatar.com/avatar/023e004f2216ede0eb3b854acd0b5da2?default=identicon&secure=true', width='80', height='80')
+                            span#name #{data.username}
                         ul.menu.vertical
                           li
                             a(href='/user/edit')
